# olist-analytics-engineering-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  compose.yaml  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt
.github/workflows/: ci.yml
.pyright/: README.md
airflow/: README.md
airflow/dags/: olist_modern_data_stack.py  olist_modern_data_stack_aws.py  olist_modern_data_stack_local.py
dbt/olist_analytics/: README.md  dbt_project.yml  profiles.yml.example
docker/airflow/: Dockerfile  load-env-and-run.sh
docs/: architecture.md  aws_next_steps.md  ci.md  data_model.md  diagrams.md  implementation_plan.md  interview_notes.md  known_limitations.md  runbook.md  runbook_macos.md  runbook_windows.md  source_contract.md  source_profile.json
docs/dbt/: .gitignore  README.md  static_index.html
infra/postgres/: 001_create_schemas.sql  002_create_raw_tables.sql  003_create_audit_tables.sql  005_create_correction_tables.sql  README.md
infra/redshift/: 001_create_schemas.sql  002_create_raw_tables.sql  004_copy_raw_tables_template.sql  005_create_correction_tables.sql  README.md
scripts/ci/: check_airflow_dag_imports.py  check_fixture_pipeline_idempotency.py  run_fixture_pipeline.py
scripts/ingestion/: __init__.py  correction_specs.py  generate_correction_feeds.py  ingest_olist_to_s3.py  local_storage.py  prepare_olist_raw_files.py  raw_files.py  record_validation.py  s3_storage.py
tests/: test_ci_data_quality_failures.py  test_dead_letter_pipeline.py
(+61 files in other folders)
